--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "jquery": "^3.4.1",
     "next": "^9.1.1",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
